# Marketplace

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  app.db  celerybeat-schedule  compose.yaml  prometheus.yml  pyproject.toml
.github/workflows/: ci-cd.yaml
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 065c8017dbe0_add_description_column_for_product.py  5276055d77e9_init.py  54afa5929fc9_add_created_at_column.py  74d7d3e828e5_add_description_to_products.py  a7dfe3bc591b_.py  e8810cc1106a_add_media_urls.py
app/api/dependencies/: current_user.py  db.py  policies.py  query_params.py  services.py
app/api/endpoints/: auth.py  chat.py  order.py  product.py  seller.py  user.py  webhook.py
app/core/: __init__.py  celery.py  config.py  exceptions.py  media.py  metrics.py  search.py  security.py  websockets.py
app/db/: database.py  elastic.py  minio.py  redis.py
app/models/: chat.py  order.py  product.py  user.py
app/policies/: common.py  policy_set.py  protocols.py
app/repositories/: __init__.py  chat.py  media.py  order.py  product.py  protocols.py  token.py  user.py
app/schemas/: chat.py  media.py  order.py  product.py  user.py
app/services/: __init__.py  auth.py  chat.py  media.py  order.py  product.py  protocols.py  user.py
app/storages/: client.py  protocols.py
app/tasks/: email.py  media.py  media_processor.py  sync.py
grafana/dashboards/: logs_dashboard.json  stats_dashboard.json
scripts/: minio_setup.sh
tests/: conftest.py  factories.py
tests/integration/: conftest.py
tests/unit/: conftest.py  dummies.py
(+37 files in other folders)
