[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tech1"
description = "FastAPI project template with async SQLite, JWT auth, Alembic, and a clean layered architecture."
version = "2026.0.0"
requires-python = ">= 3.12"

dependencies = [
    "alembic>=1.18.4",
    "aiosqlite>=0.21.0",
    "fastapi[standard]>=0.115.0",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.49",
    "celery>=5.6.3",
    "redis>=8.0.0",
    "elasticsearch>=9.4.1",
    "greenlet>=3.5.1",
    "aioboto3>=15.5.0",
    "pillow>=12.2.0",
    "ffmpeg-python>=0.2.0",
    "filetype>=1.2.0",
    "prometheus-fastapi-instrumentator>=8.0.2",
    "prometheus-client>=0.25.0",
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.7",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 108
target-version = "py312"
exclude = [".venv", "migrations", ".git"]
lint.select = ["E", "F", "I", "UP", "DJ"]
lint.ignore = ["UP046"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration (require live external services like MinIO)",
    "unit: marks tests as unit",
]
